# Robotic_Arm

./: README.md
.catkin_tools/profiles/default/: devel_collisions.txt
arm_moveit/launch/: moveit.rviz
arm_teleop/: CMakeLists.txt  package.xml
arm_teleop/src/: aa.py  ab.py  boundary.py  controller.py  controller_based_control.py  controller_based_control2.py  goal_based_control.py  ik_test.py  joystick_controller.py  teleop_xbox_ee.py  test_planning_n_execution.py  xbox.py
arm_urdf/urdf/: arm_urdf.urdf
devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
devel/.private/arm_moveit/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/.private/arm_urdf/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/.private/arm_urdf_moveit/: .catkin  local_setup.sh
devel/.private/catkin_tools_prebuild/: .catkin  local_setup.sh  setup.sh
devel/lib/pkgconfig/: arm_moveit.pc  arm_urdf.pc  arm_urdf_moveit.pc  catkin_tools_prebuild.pc
devel/share/arm_moveit/cmake/: arm_moveitConfig-version.cmake  (+1 more)
src/arm_moveit/: .setup_assistant
src/arm_moveit/config/: ompl_planning.yaml
src/arm_urdf_moveit/: .setup_assistant
src/arm_urdf_moveit/config/: arm_urdf.srdf  fake_controllers.yaml  ompl_planning.yaml
src/arm_urdf_moveit/launch/: chomp_planning_pipeline.launch.xml  demo.launch  gazebo.launch  moveit.rviz  ompl-chomp_planning_pipeline.launch.xml  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_controllers.launch  sensor_manager.launch.xml  stomp_planning_pipeline.launch.xml
(+14 files in other folders)
